src/components/Nav/Nav.module.scss
@use '../../styles/colors' as *;
@use '../../styles/breakpoints' as *;

.fullWidth {
  grid-column: 1 / span 14;
  display: grid;
  grid-template-columns: 1fr repeat(12, minmax(auto, 6.9rem)) 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  background-color: $blue-700;
  color: $white;
}

.maxWidth {
  grid-column: 2 / span 12;
  grid-row: 2/2;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.leftSide {
  display: flex;
  align-items: center;
  cursor: pointer;
}
.navSeparator {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 1rem;
}

.rightSide {
  display: flex;
  align-items: center;
}

.title {
  font-weight: 500;
  font-size: 2rem;
}

.arrow {
  border: solid;
  border-width: 0 2px 2px 0;
  display: inline-block;
  padding: 3px;
  margin-left: 4px;
}

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.network {
  background: none;
  border: none;
  font-size: 0.8rem;
  text-decoration: none;
  cursor: pointer;
  color: inherit;
  padding: 14px;
}

.dropdown {
  position: relative;
  min-width: 110px;
  border: 1px solid $white;
  border-radius: 8px;
  cursor: pointer;
}

.dropdownContent {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: $white;
  left: 0;
  width: 100%;
  top: calc(100% + 0.25rem);
  border-radius: 0.5rem;
  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.6);
  padding: 12px 16px;
  z-index: 1;
  opacity: 0;
  transform: translateY(-10px);
  transition: opacity 150ms ease-in-out, transform 300ms ease-in-out;
}

.dropdownItem {
  display: flex;
  padding: 10px;
  width: 100%;
  color: $gray-600;
}
.dropdownItem:hover {
  border-radius: 10px;
  background-color: $grayCool-100;
  color: $black;
}

.dropdown > .network:focus + .dropdownContent {
  opacity: 1;
  transform: translateY(0);
}

@media screen and (max-width: $md) {
  .fullWidth {
    padding-right: 1rem;
    padding-left: 1rem;
    grid-template-columns: none;
    display: block;
  }
}

@media screen and (max-width: $xlg) {
  .fullWidth {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media screen and (min-width: $sm) {
  .rightSide {
    flex-wrap: wrap-reverse;
  }
  .maxWidth {
    gap: 1rem;
  }
  .dropdown {
    min-width: unset;
  }
}

